--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@semantic-release/exec": "^6.0.3",
-    "@semantic-release/git": "^10.0.1"
+    "@semantic-release/git": "^10.0.1",
+    "prettier": "^2.7.1"
   }
 }
