--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,4 +25,4 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install Tool Versions
         uses: asdf-vm/actions/install@v1
-      - run: make test
+      - run: go test ./...
