--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,8 +14,8 @@ jobs:
       - name: Install Tool Versions
         uses: asdf-vm/actions/install@v1
       - name: Install dependencies
-        run: npm ci
+        run: yarn install --frozen-lockfile
       - name: Release
         env:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-        run: npx semantic-release
+        run: yarn run semantic-release
